[gd_scene load_steps=2 format=2]

[ext_resource path="res://Example/VarInjectExample.gd" type="Script" id=1]

[node name="VarInjectExample" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 212.0
margin_top = 211.0
margin_right = 812.0
margin_bottom = 389.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 600, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/Panel/VBoxContainer"]
margin_right = 600.0
margin_bottom = 14.0

[node name="text" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 600.0
margin_bottom = 178.0

[node name="player_name" type="LineEdit" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
placeholder_text = "player_name"

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_top = 5.0
margin_right = 556.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 560.0
margin_right = 600.0
margin_bottom = 24.0
text = "next"
[connection signal="text_changed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/player_name" to="." method="_on_player_name_text_changed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
